Suman | #826 | Fix top alignment of answers in print

--- a/ui/app/styles/print.scss
+++ b/ui/app/styles/print.scss
@@ -945,7 +945,8 @@ h1, h2, h3 {
             }
             .value-text-only, .text-only{
                 width: 35% !important;
-                padding: 1% !important;
+                padding-right: 1% !important;
+                padding-left: 1% !important;
                 display:inline-block;
             }
             .testUnderPanel{
